feat:調整comment model 與 api
